# formate-black

./: .bumpversion.cfg  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  safety.yml
formate_black/: __init__.py
tests/: LICENSE  example_formate.toml  requirements.txt  test_format.py  test_formate_black.py  test_formate_plugin.py  util.py
tests/test_formate_black_/: test_line_length_115_.txt  test_line_length_300_.txt
