[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "formate-black"
version = "0.1.0"
description = "Use black with formate."
readme = "README.rst"
keywords = [ "black", "formate", "formatting", "linting",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/formate-black"
"Issue Tracker" = "https://github.com/repo-helper/formate-black/issues"
"Source Code" = "https://github.com/repo-helper/formate-black"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "formate_black"

[project.entry-points.formate_hooks]
black = "formate_black:black_hook"
