[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "formate-black"
version = "0.2.0.post1"
description = "Use black with formate."
readme = "README.rst"
keywords = [ "black", "formate", "formatting", "linting",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/python-formate/formate-black"
"Issue Tracker" = "https://github.com/python-formate/formate-black/issues"
"Source Code" = "https://github.com/python-formate/formate-black"

[project.entry-points.formate_hooks]
black = "formate_black:black_hook"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "formate_black"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = [ "attr_utils.mypy_plugin",]
show_error_codes = true
exclude = "tests/data"

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
