# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = formate-black
version = 0.1.0
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords = formatting, linting, black, formate
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/repo-helper/formate-black
project_urls =
    Issue Tracker = https://github.com/repo-helper/formate-black/issues
    Source Code = https://github.com/repo-helper/formate-black
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True
plugins = attr_utils.mypy_plugin
exclude = tests/data

[options.entry_points]
formate_hooks = black=formate_black:black_hook
